--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -32,12 +32,18 @@ body{
     }
     
     section#login > div#imagem{
-        float: left;
+        float:right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > p{
+        font-size: 1.2em;
+    }
+    div#fomrulario > h1{
+        font-size: 2em;
     }
 }
