bug de animação resolvido

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate( -50%, -50%);
     overflow: hidden;
     
     background-color: white;
@@ -38,6 +37,7 @@ section#login{
 
     transition: width .3s, heigth .3s;
     transition-timing-function: ease;
+    transform: translate( -50%, -50%);
    
 }
 section#login > div#imagem {
@@ -53,6 +53,7 @@ section#login > div#formulario{
     display: block;
 
 }
+
 div#formulario >  h1{
     text-align: center;
     margin-bottom: 10px;
@@ -61,6 +62,7 @@ div#formulario >  h1{
 }
 div#formulario > p{
     font-size: 0.8em;
+    
 }
 
 form > .campo{
@@ -68,13 +70,35 @@ form > .campo{
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+    border: 2px solid #5f2c82;
     
 }
 
 div.campo > label{
 display: none;
+}
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+
+
+}
+div.campo > input{
+    background-color:#92e2df ;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+div.campo> input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit]{
