--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,6 +7,7 @@
 
     section#login{
         width: 80vw;
+        height: 280px;
 
     }
     section#login > div#imagem{
@@ -28,6 +29,7 @@ body{
 
     section#login{
         width: 950px;
+        height: 350px;
 
     }
     
@@ -42,6 +44,7 @@ body{
     }
     div#formulario > p{
         font-size: 1.2em;
+        margin: 20px 0px;
     }
     div#fomrulario > h1{
         font-size: 2em;
