--- a/estilos/style.css
+++ b/estilos/style.css
@@ -96,6 +96,7 @@ div.campo > input{
     border-radius: 8px;
     padding: 4px;
     transform: translateY(-12px);
+    box-shadow: inset 2px 2px 4px black;
 }
 div.campo> input:focus-within{
     background-color: white;
